Adding SignIn method

--- a/SignInScreen/SignInScreen/MainPage.xaml
+++ b/SignInScreen/SignInScreen/MainPage.xaml
@@ -108,6 +108,7 @@
         <Button
             Text="{StaticResource ButtonText}"
             Style="{StaticResource ButtonStyle}"
+            Clicked="OnSignInButtonClick"
             HorizontalOptions="Center" 
             VerticalOptions="CenterAndExpand"/>
 
